--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -24,6 +24,7 @@
             <td>
                 <%= f.departs %>
             </td>
+            <td><a href="/flights/<%= f._id %>">DETAILS</a></td>
         </tr>
         <% }); %>
     </tbody>
